--- a/src/app/dashboard/company/company-offers/company-offers.component.html
+++ b/src/app/dashboard/company/company-offers/company-offers.component.html
@@ -27,9 +27,9 @@
                   <th>Poste occupé</th>
                   <th>Réference</th>
                   <th>Type</th>
-                  <th>Date limite</th>
+                  <th>Date d'ajout</th>
                   <th>Status</th>
-                  <th>Secteur d'activité</th>
+                  <th>Date limite</th>
                   <th class="no-sort">Action</th>
                 </tr>
               </thead>
