--- a/src/app/dashboard/taxonomy/taxonomy.component.html
+++ b/src/app/dashboard/taxonomy/taxonomy.component.html
@@ -13,9 +13,9 @@
         <table class="table table-hover" id="taxonomy-table">
           <thead class="thead-default thead-lg">
             <tr>
-              <th>ID</th>
+              <th class="no-sort">ID</th>
               <th>Nom</th>
-              <th>Statut</th>
+              <th class="no-sort">Statut</th>
               <th class="no-sort">Action</th>
             </tr>
           </thead>
