--- a/src/app/dashboard/offers/offer-edit/offer-edit.component.html
+++ b/src/app/dashboard/offers/offer-edit/offer-edit.component.html
@@ -4,7 +4,7 @@
     <div class="ibox-body" *ngIf="loadingForm">
       <div class="row">
         <div class="col-4 mb-4">
-          <a class="btn btn-primary btn-sm btn-air mr-2" [routerLink]="['/offer-lists']">Retour</a>
+          <a class="btn btn-primary btn-sm mr-2" [routerLink]="['/offer-lists']">Retour</a>
           <a class="btn btn-secondary btn-sm mr-2" target="_blank" [href]="Offer.offer_url">Visualiser</a>
         </div>
       </div>
@@ -12,13 +12,12 @@
         {{Editor.postPromote}}
         <div *ngIf="Editor.offer_status === 'pending'"><span class="badge badge-pill badge-warning"> En attente de
             validation</span></div>
-        <div *ngIf="Editor.offer_status === 0 || Editor.offer_status === '0'"><span class="badge badge-pill badge-pink">Candidat
+        <div *ngIf="Editor.offer_status === 0 || Editor.offer_status === '0'"><span class="badge badge-pill badge-pink">Offre
             désactiver</span></div>
       </h5>
       <div class="row">
         <div class="col-lg-7">
           <form #editForm="ngForm" (ngSubmit)="onSubmitForm( editForm )">
-
             <div class="row">
               <div class="form-group mb-4 col-sm-8">
                 <label class="font-bold">Poste occupé </label>
@@ -26,7 +25,6 @@
                   placeholder="Titre de l'offre">
               </div>
             </div>
-
             <div class="row">
               <div class="form-group mb-4 col-sm-8">
                 <label class="font-bold">Référence </label>
@@ -34,7 +32,6 @@
                   name="reference" placeholder="Référence de l'offre">
               </div>
             </div>
-
             <div class="row">
               <div class="col-sm-6 form-group mb-4">
                 <label class="font-bold">Statut</label>
@@ -48,7 +45,6 @@
                 </div>
               </div>
             </div>
-
             <div class="row">
               <div class="col-sm-6 form-group mb-4">
                 <label class="font-bold">Type de contrat</label>
@@ -60,7 +56,6 @@
                   </select>
                 </div>
               </div>
-
               <div class="form-group mb-4 col-sm-4">
                 <label class="font-bold">Salaire net proposé </label>
                 <input class="form-control form-control-solid" [(ngModel)]="Editor.proposedSalary" type="text" name="proposedsalary"
@@ -90,13 +85,21 @@
                 </ng-select>
               </div>
             </div>
-            <div class="row">
-              <div class="col-sm-6 form-group mb-4">
+            <div class="row  mb-4">
+              <div class="col-sm-6 form-group">
                 <label class="font-bold">Date limite de candidature</label>
                 <div class="input-group date">
                   <span class="input-group-addon bg-white"><i class="fa fa-calendar"></i></span>
-                  <input class="form-control" name="date_limit" readonly="readonly" [(ngModel)]="Editor.dateLimit" type="text" value=""
+                  <input class="form-control" name="date_limit" appDatepicker readonly="readonly" [(ngModel)]="Editor.dateLimit" [value]="Editor.dateLimit" type="text"
                     placeholder="Date limite de publication">
+                </div>
+              </div>
+              <div class="col-sm-6 from-group">
+                <label class="font-bold">Dates de création</label>
+                <div class="input-group date">
+                  <span class="input-group-addon bg-white"><i class="fa fa-calendar"></i></span>
+                  <input class="form-control" name="date_create" [disabled]="true" [(ngModel)]="Editor.datePublication" type="text"
+                    placeholder="Dates de création">
                 </div>
               </div>
             </div>
@@ -106,7 +109,6 @@
                   <label class="font-bold">Profil recherché</label>
                   <editor apiKey="2grxn9iofnxolcaedqa399sh4ft6c1mg3e1kumgnyq6o0ap1" required [(ngModel)]="Editor.profil"
                     name="profil" [init]="tinyMCESettings">
-
                   </editor>
                 </div>
               </div>
@@ -115,33 +117,28 @@
                   <label class="font-bold">Mission</label>
                   <editor apiKey="2grxn9iofnxolcaedqa399sh4ft6c1mg3e1kumgnyq6o0ap1" required [(ngModel)]="Editor.mission"
                     name="mission" [init]="tinyMCESettings">
-
                   </editor>
                 </div>
               </div>
               <div class="col-sm-12">
                 <div class="form-group mb-4">
                   <label class="font-bold">Autre information</label>
-                  <editor apiKey="2grxn9iofnxolcaedqa399sh4ft6c1mg3e1kumgnyq6o0ap1" required [(ngModel)]="Editor.otherInformation"
+                  <editor apiKey="2grxn9iofnxolcaedqa399sh4ft6c1mg3e1kumgnyq6o0ap1" [(ngModel)]="Editor.otherInformation"
                     name="otherInformation" [init]="tinyMCESettings">
-
                   </editor>
                 </div>
               </div>
             </div>
-
             <div class="text-right">
               <input type="hidden" name="ID" [(ngModel)]="Editor.ID">
               <button class="btn btn-primary btn-air mr-2" [disabled]="loadingSave" type="submit">
                 Enregistrer
               </button>
-              <button class="btn btn-secondary">Annuler</button>
+              <a class="btn btn-secondary" [routerLink]="['/offer-lists']">Annuler</a>
             </div>
           </form>
         </div>
-
         <div class="col-lg-5">
-
           <div class="ibox">
             <div class="ibox-body">
               <h5 class="font-strong mb-4">{{Offer.__info.title}}</h5>
@@ -169,7 +166,6 @@
               </div>
             </div>
           </div>
-
           <div class="ibox">
             <div class="ibox-body">
               <app-postuled-candidates [offerid]="ID">
