--- a/src/app/directives/offers/postuled-candidates/postuled-candidates.component.html
+++ b/src/app/directives/offers/postuled-candidates/postuled-candidates.component.html
@@ -3,13 +3,13 @@
     <div class="ibox-title">Les candidats ayant été sélectionnés/postulés</div>
   </div>
   <div class="ibox-body">
-    <ul class="media-list media-list-divider mr-2 scroller" data-height="470px">
+    <ul class="media-list media-list-divider mr-2 scroller">
       <li class="media align-items-center" *ngFor="let request of Requests">
         <div class="media-body d-flex align-items-center">
           <div class="flex-1">
             <div class="media-heading">
-              {{request.candidate.title}}
-              <span class="badge badge-default ml-2" *ngIf="request.status === 'pending'">En attent</span>
+              <a [routerLink]="[ '/candidate',  request.candidate.ID, 'edit']">{{request.candidate.title}}</a>
+              <span class="badge badge-default ml-2" *ngIf="request.status === 'pending'">En attente</span>
               <span class="badge badge-success ml-2" *ngIf="request.status === 'validated'">Valider</span>
               <span class="badge badge-danger ml-2" *ngIf="request.status === 'reject'">Réjeter</span>
             </div>
@@ -17,10 +17,9 @@
               {{request.candidate.privateInformations.lastname}}</small>
 
             <div class="mt-2 mb-2" *ngIf="request.lm_link">
-              <a href="{{request.lm_link.scheme}}://{{request.lm_link.host}}{{request.lm_link.path}}" target="_blank" class="badge badge-default" [title]="request.lm_name">
+              <a href="{{request.lm_link.scheme}}://{{request.lm_link.host}}{{request.lm_link.path}}" target="_blank" class="badge badge-info" [title]="request.lm_name">
                 <span class="btn-icon"><i class="la la-paperclip"></i>Lettre de motivation</span>
               </a>
-
             </div>
             <div>
               <span class="badge badge-default" *ngIf="request.type === 'apply'">Postuler</span>
