--- a/src/app/dashboard/offers/offer-lists/offer-lists.component.html
+++ b/src/app/dashboard/offers/offer-lists/offer-lists.component.html
@@ -8,8 +8,8 @@
       <form class="form-success mb-4">
         <div class="row mb-4">
           <div class="col-md-4 mb-2 mb-sm-0">
-            <select class="selectpicker form-control " id="type-status" title="Tous les status" data-style="btn-solid">
-              <option value="">Tous les status</option>
+            <select class="selectpicker form-control " id="type-status" title="Tous les statuts" data-style="btn-solid">
+              <option value="">Tous les statuts</option>
               <option value="pending">En attente</option>
               <option value="1">Publier</option>
               <option value="0">Désactiver</option>
