--- a/src/app/directives/offers/postuled-candidates/postuled-candidates.component.html
+++ b/src/app/directives/offers/postuled-candidates/postuled-candidates.component.html
@@ -8,7 +8,7 @@
         <div class="media-body d-flex align-items-center">
           <div class="flex-1">
             <div class="media-heading">
-              <a [routerLink]="[ '/candidate',  request.candidate.ID, 'edit']">{{request.candidate.title}}</a>
+              <a target="_blank" [routerLink]="[ '/candidate',  request.candidate.ID, 'edit']">{{request.candidate.title}}</a>
               <span class="badge badge-default ml-2" *ngIf="request.status === 'pending'">En attente</span>
               <span class="badge badge-success ml-2" *ngIf="request.status === 'validated'">Valider</span>
               <span class="badge badge-danger ml-2" *ngIf="request.status === 'reject'">Réjeter</span>
@@ -22,8 +22,8 @@
               </a>
             </div>
             <div>
-              <span class="badge badge-default" *ngIf="request.type === 'apply'">Postuler</span>
-              <span class="badge badge-default" *ngIf="request.type === 'interested'">Sélectionner</span>
+              <span class="badge badge-default text-uppercase" *ngIf="request.type === 'apply'">à postuler</span>
+              <span class="badge badge-default text-uppercase" *ngIf="request.type === 'interested'">Sélectionner</span>
             </div>
 
           </div>
